--- a/challenge/main_page/profile/analyse.html
+++ b/challenge/main_page/profile/analyse.html
@@ -15,21 +15,18 @@
         <h1>Agrisaarthi</h1>
         <nav class="nav-links">
             <a href="user.html">Dashboard</a>
-            <a onclick="scrollToSection('home_options')">Marketplace </a> 
-            <!-- <a href="#">Support</a> -->
-            <!-- <div class="options"> -->
-                <select id="language-selector nav-links">
-                       <option value="en">English</option>
-                    <option value="hi">हिन्दी</option>
-                </select>
+            <a href="marketplace.html">Marketplace</a>
+            <select id="language-selector nav-links">
+                   <option value="en">English</option>
+                <option value="hi">हिन्दी</option>
+            </select>
         </nav>
         
             <div class="user-menu">
                 <button id="user-button"><i class="fa-solid fa-user"></i>   </button>
                 <div class="user-dropdown" id="user-dropdown">
                     <a href="#">Profile</a>
-                    <!-- <a href="#">Settings</a> -->
-                    <a href="#">Logout</a>
+                    <a href="#" id="logout-button">Logout</a>
                 </div>
             </div>
         </div>
@@ -45,4 +42,34 @@
                 document.getElementById("user-dropdown").style.display = "none";
             }
         });
-    </script>  
+    </script>
+
+    <!-- Added main content area for disease prediction -->
+    <main style="padding: 20px; text-align: center;">
+        <h2>Plant Disease Analysis</h2>
+        <p>Upload an image of the plant leaf to detect diseases.</p>
+
+        <form id="disease-form" style="margin-top: 20px;">
+            <div>
+                <label for="image-upload">Choose an image:</label>
+                <input type="file" id="image-upload" name="image-upload" accept="image/*" required>
+            </div>
+            <div id="image-preview" style="margin-top: 15px; min-height: 100px;">
+                <!-- Image preview will be shown here -->
+            </div>
+            <button type="submit" id="analyze-button" style="margin-top: 15px; padding: 10px 20px;">Analyze Image</button>
+        </form>
+
+        <div id="result-area" style="margin-top: 30px; text-align: left; border: 1px solid #ccc; padding: 15px; min-height: 50px; background-color: #f9f9f9;">
+            <h3>Analysis Result:</h3>
+            <pre id="prediction-result">Waiting for analysis...</pre>
+        </div>
+         <div id="message-area" style="text-align: center; margin-top: 15px; color: red;"></div>
+    </main>
+
+    <!-- Added script tags -->
+    <script src="profile.js" defer></script>
+    <!-- Removed analyse.js -->
+
+</body>
+</html>
