--- a/challenge/main_page/profile/user.html
+++ b/challenge/main_page/profile/user.html
@@ -14,7 +14,8 @@
     <header class="header">
         <h1>Agrisaarthi</h1>  
         <nav class="nav-links">
-            <a onclick="scrollToSection('home_options')"> Dashboard </a> 
+            <a href="user.html">Dashboard</a> <!-- Changed to direct link -->
+            <a href="marketplace.html">Marketplace</a> <!-- Added Marketplace link -->
     <script>
     function scrollToSection(id) {
         const account= document.getElementById(id);
@@ -23,9 +24,8 @@
         }
     }
 </script>
-            <a href="#">Marketplace</a>
+            <!-- Removed duplicate Marketplace link -->
             <!-- <a href="#">Support</a> -->
-            <!-- <div class="options"> -->
                 <select id="language-selector nav-links">
                        <option value="en">English</option>
                     <option value="hi">हिन्दी</option>
@@ -37,7 +37,8 @@
                 <div class="user-dropdown" id="user-dropdown">
                     <a href="#">Profile</a>
                     <!-- <a href="#">Settings</a> -->
-                    <a href="#">Logout</a>
+                    <!-- Added id="logout-button" -->
+                    <a href="#" id="logout-button">Logout</a>
                 </div>
             </div>
         </div>
@@ -56,7 +57,8 @@
     </script>           <!-- hero section starts -->
     <div class="main">
 <section class="hero">
-        <h1 id="welcome-message">Welcome </h1>
+        <!-- Added span with id="user-name" -->
+        <h1 id="welcome-message">Welcome, <span id="user-name">User</span>!</h1>
         <h3>Here’s your activity – track your progress, purchases, and learning journey.</h3>
         <div class="buttons">
             <button onclick="viewHistory()">View History</button>
@@ -121,31 +123,10 @@
     </div>
     </section>
 
-    <script>
-        // Function to get user's name (simulated login system)
-        function getUser() {
-            let userName = localStorage.getItem("userName");
-
-            if (!userName) {
-                userName = prompt("Enter your name:");
-                localStorage.setItem("userName", userName);
-            }
-
-            document.getElementById("welcome-message").innerText = `Welcome, ${userName}!`;
-        }
-
-        function viewHistory() {
-            alert("Redirecting to Activity History..."); 
-        }
-
-        function trackProgress() {
-            alert("Redirecting to Progress Tracking...");
-        }
-
-        // Load user on page load
-        window.onload = getUser;
-    </script>
+    <!-- Removed old script block -->
     </div>
+    <!-- Added profile.js script tag -->
+    <script src="profile.js" defer></script>
     </body>
 
     <footer>
