--- a/challenge/main_page/about/about.html
+++ b/challenge/main_page/about/about.html
@@ -20,7 +20,7 @@
         <div class="menu_bar"> <div class="logo"> AgriSaarthi</div>
   
               <div class="account">
-  <a href="account.html"> <strong> Sign in &nbsp;</strong> </a>  
+  <a href="account.html"> <strong> Sign up &nbsp;</strong> </a>  
   
  
 </div>
