--- a/challenge/main_page/contact.html
+++ b/challenge/main_page/contact.html
@@ -11,8 +11,6 @@
 
     <link rel="stylesheet" href="contact.css">
 
-    <!-- <script src="script.js"></script> -->
-
 </head>
 <body>
     <header> 
@@ -39,7 +37,9 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Easy Solutions. All rights reserved.</p>
+        <div class="footer">
+                <p>&copy; 2025 Easy Solutions. All rights reserved.</p>
+                </div>
     </footer>
 
        
