--- a/challenge/main_page/about/track.html
+++ b/challenge/main_page/about/track.html
@@ -16,6 +16,7 @@
         <nav class="nav-links">
             <!-- <a href="#">Support</a> -->
             <!-- <div class="options"> -->
+        </header>
 
 
 <div class="map_bg">
